<resources>
    <string name="app_name">sklad</string>
    <string name="add">add</string>
    <string name="del">удалён</string>
    <string name="name_category">Название категории</string>
    <string name="no_tile">Не введено название категории</string>
    <string name="add_it">add</string>
    <string name="name_element">Название елемента</string>
    <string name="stock_balance">Остаток на складе</string>
    <string name="critical_residue">Критический остаток</string>
    <string name="input_title">Введите название</string>
    <string name="current_balance">Укажите текущий остаток</string>
    <string name="krit_val">Значение, при котором остаток будет выделяться красным</string>
    <string name="toast_cat_message">Не заполнены все поля</string>
    <string name="toast_edit_element_message">Ни одно из полей не изменено или какие-то поле пустое</string>
    <string name="toast_main_message">Пустая категория не будет сохранена. Добавьте элемент!</string>
    <string name="toast_El_Act_message">Поле значения не заполненою. Элемент не был изменнён!</string>
    <string name="toast_El_Act_permission">Разрешения были отключены, добавьте их в настройках!</string>
    <string name="toast_El_Act_no_permission">Разрешения были отключены!</string>
    <string name="toast_El_Act_save_exception">Не удалось сохранить изображение!</string>
    <string name="toast_His_Act">Верно введите дату, например "2024–10–19"</string>
    <string name="el_foto">foto</string>
    <string name="History_operation">История операций</string>
    <string name="from">C:</string>
    <string name="to">По:</string>
    <string name="share">Отправить:</string>
    <string name="delete">Удалить:</string>
    <string name="edite">Изменить:</string>
    <string name="category">Категория:</string>
    <string name="element">Элемент</string>
    <string name="el_aldig_del_title">Удалить элемент?</string>
    <string name="el_aldig_del_text">"Элемент будет удален безвозвратно!! Вы действительно хотите удалить этот элемент?"</string>
    <string name="error_input">Неверный формат ввода</string>
    <string name="create_element">Создание элемента</string>
    <string name="from_gal">из Галереи</string>
    <string name="from_cam">с Камеры</string>
    <string name="edite_image">Изменить изображение</string>
    <string name="edite_el">Изменение элемента</string>
    <string name="before_edite">до изменения</string>
    <string name="after_edite">после изменения</string>
    <string name="input_title_cat">Введите название категории</string>
    <string name="statistic_for_period">Статистика за период</string>
    <string name="all">ВСЕ</string>
    <string-array name="item_spinner">
        <item>Расход (-)</item>
        <item>Приход (+)</item>
    </string-array>

</resources>