<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryActivity">

    <TextView
        android:id="@+id/titleTVStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/History_operation"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fromTVHis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTVStat" />

    <EditText
        android:id="@+id/dateToETHis"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:ems="10"
        android:hint="YYYY-MM-DD"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/to"
        app:layout_constraintBottom_toBottomOf="@+id/fromTVHis"
        app:layout_constraintStart_toEndOf="@+id/dateFromETHis"
        app:layout_constraintTop_toTopOf="@+id/fromTVHis" />

    <EditText
        android:id="@+id/dateFromETHis"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="YYYY-MM-DD"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/fromTVHis"
        app:layout_constraintStart_toEndOf="@+id/fromTVHis"
        app:layout_constraintTop_toTopOf="@+id/fromTVHis"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateFromETHis" />

    <Spinner
        android:id="@+id/catSpHis"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/ElSpHis"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/element"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/catSpHis"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <Button
        android:id="@+id/okBtHis"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/ElSpHis"
        app:layout_constraintStart_toEndOf="@+id/ElSpHis"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recVHis"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catSpHis"
        app:layout_constraintVertical_bias="0.03" />

    <ImageButton
        android:id="@+id/sharBtHis"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#BCB1B1"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_share"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>